<resources>
    <string name="app_name">our project</string>
    <string name="title1">All Your</string>
    <string name="title2">Healthcare Needs</string>
    <string name="title3">in One Place</string>
    <string name="signuptitle">Sign Up</string>
    <string name="button1">Start</string>
    <string name="firstname">First name</string>
    <string name="lastname">Surname</string>
    <string name="phonenumber">Mobile number</string>
    <string name="creatingpassword">New Password</string>
    <string name="birthday">Date of birth?</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="type">Gender:</string>
    <string name="welcome">Welcome To Roshetaa</string>
    <string name="typemale">Male</string>
    <string name="typefemale">Female</string>
    <string name="button2">Sign Up</string>
    <string name="data">username:</string>
    <string name="flow">login</string>
    <string name="ww">password:</string>
    <string name="dd">Create a new account</string>
    <string name="aa">Enter the code send: </string>
    <string name="qq">continue</string>
    <string name="money">Do you want to pay cash or visa?</string>
    <string name="cash">Cash</string>
    <string name="visa">Visa</string>
    <string name="tv_First_Name">First Name</string>
    <string name="tv_Last_Name">Last_Name</string>
    <string name="tv_phone_number"> Phone number</string>
    <string name="tv_card_number">Card Number</string>
    <string name="tv_code">Security code</string>
    <string name="tv_date">Expiration Date</string>
    <string name="btn_confirm">confirm</string>
    <string name="tv_process">Payment completed successfully</string>
    <string name="btn_back">back</string>
    <string name="advertisment">Need a doctor?</string>
    <string name="advertisment2">Book online or call us to help you</string>
    <string name="city">Your City:</string>
    <string name="diseases">have chronic diseases?</string>
    <string name="surgeries">Had surgeries before?</string>
    <string name="hisrory">Have medical history?</string>
    <string name="fees">maximum fees?</string>
    <string name="speciality">Speciality</string>
    <string name="specialityname">Write Speciality</string>
    <string name="cityname">Enter Your City</string>
    <string name="check1">Yes</string>
    <string name="check2">No</string>
    <string name="price">Write Number</string>
    <string name="button20">Supmit</string>
    <string name="address1">Write your area:</string>
    <string name="addressquestion">or access your location?</string>
    <string name="choose">choose clinic</string>


</resources>