<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bac"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFEFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/customStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_First_Name" />

        <EditText
            style="@style/customStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/customStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Last Name" />

        <EditText
            style="@style/customStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/customStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_phone_number" />

        <EditText
            style="@style/customStyle"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/customStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_code" />

        <EditText
            style="@style/customStyle"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/customStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_card_number" />

        <EditText
            style="@style/customStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/customStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date" />

        <EditText
            style="@style/customStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:backgroundTint="#DA680F98"
        android:padding="10dp"
        android:text="@string/btn_confirm"
        android:textSize="24sp" />


</LinearLayout>