<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/aaa"
        android:padding="10dp"
        android:layout_margin="10dp"


        ></ImageView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        android:padding="10dp"
        android:layout_margin="10dp"
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/money"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"

            ></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        android:padding="10dp"
        android:layout_margin="10dp"


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cash"
            android:textSize="25dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"

            ></Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="25dp"
            android:text="@string/visa"></Button>
        android:padding="10dp"
        android:layout_margin="10dp"
    </LinearLayout>

</LinearLayout>